tests/specs/function_declaration.txt
# mod.ts
export function fun() {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function fun() {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

function fun(): void


# output.json
[
  {
    "name": "fun",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "function",
        "def": {
          "params": [],
          "returnType": {
            "repr": "void",
            "kind": "keyword",
            "value": "void"
          },
          "hasBody": true,
          "isAsync": false,
          "isGenerator": false,
          "typeParams": []
        }
      }
    ]
  }
]
